# docs-series

./: .gitignore  README.md
anthropic-python-sdk/: README.md  pyproject.toml
anthropic-python-sdk/examples/: 1.py  1a.py  2.py  2a.py
anthropic-python-sdk/scratch/: response.md
crewai-x-agentops/: README.md  pyproject.toml
crewai-x-agentops/example_1/: README.md  README_with_errors.md  main.py  main_with_agentops.py  pyproject.toml
crewai-x-agentops/example_2/: README.md  pyproject.toml  report.md
crewai-x-agentops/example_2/db/: chroma.sqlite3
crewai-x-agentops/example_2/src/example_2/: crew.py  crew_before_agentops.py  main.py
crewai-x-agentops/example_2/src/example_2/config/: tasks.yaml
crewai-x-agentops/our_project_folder/: pyproject.toml
crewai-x-agentops/our_project_folder/rag_assistant/: README.md  pyproject.toml  report.md
crewai-x-agentops/our_project_folder/rag_assistant/db/: chroma.sqlite3
crewai-x-agentops/our_project_folder/rag_assistant/src/rag_assistant/: crew.py  main.py
crewai-x-agentops/our_project_folder/rag_assistant/src/rag_assistant/config/: agents.yaml
openai-python-sdk/: .env.example  requirements.txt
openai-python-sdk/examples/: 1.py  2.py  3.py
